--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   firebase_auth: 
   device_preview:
   cloud_firestore:
+  google_maps_flutter:
+  geolocator:
+  provider:
+  location:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
