--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,30 +20,24 @@ version: 1.0.0+1
 
 environment:
   sdk: ^3.8.1
-
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core:
-  firebase_data_connect:
-  firebase_auth: 
-  device_preview:
-  cloud_firestore:
-  google_maps_flutter:
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.5
+  cloud_firestore: ^4.14.0
+  google_maps_flutter: ^2.6.0
+  url_launcher: 
+  flutter_svg: 
+  cupertino_icons:
   geolocator:
   provider:
   location:
   http:
+  device_preview: 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+
+ 
 
 dev_dependencies:
   flutter_test:
